# rsfpy

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
scripts/: package_rsfpy_windows_ucrt64.sh
src/: Mpygrey.py  Msvgpen.py
src/rsfpy/: __init__.py  array.py  fft.py  io.py  utils.py  version.py
src/rsfpy/m8r/: __init__.py  patches.py
src/rsfpy/plot/: __init__.py  display.py  grey.py  grey3.py  parameters.py  png.py  style.py  utils.c  wiggle.py
src/rsfpy/plot/commands/: __init__.py  common.py  graph.py  grey.py  grey3.py  io.py  wiggle.py
src/rsfpy/plot/movie/: __init__.py  base.py  graph.py  grey.py  grey3.py  wiggle.py
src/rsfpy/tools/: Mpygrey.py  Mrsfclient.py  Mrsfgraph.py  Mrsfgrey.py  Mrsfgrey3.py  Mrsfmath.py  Mrsfview_client.py  Mrsfvpl2svg.py  Mrsfwiggle.py  Msvgpen.py  Msvgviewer.py  Mvplviewer.py  rsfclient.c  svg_png_tiler.c  svg_png_tiler.h  svg_sequence.h  svgsequence.c  svgsequence.h  svgsequence_x11.c  svgviewer.c  svgviewer_clipboard_macos.m  svgviewer_x11.c  vpl2svg.c
test/: Mpygrey.py  Testplot.py  Testread.py  dat.test  svgrendertest.py
